# saritasa-devops-tools-cli

./: .dockerignore  .flake8  .gitignore  .gitmessage  .ignore  .isort.cfg  .pylintrc  .style.yapf  CHANGELOG.md  LICENSE.md  Makefile  README.md  pylama.ini  pyproject.toml  pytest.ini  setup.cfg  setup.py  tasks.py
dev/: __init__.py  common.py  dev.py  django.py  docker.py  docs.py  iam.py  start.py  system.py  tests.py  tools.py
marina/: main.py
marina/aws/: accounts.py  iam.py
marina/clients/: __init__.py  saritasa.py
marina/utils/: secrets.py
requirements/: base.in  development.in  development.txt  production.in  production.txt  staging.in  staging.txt
