[metadata]
license_file = LICENSE.md

[flake8]
exclude = node_modules, migrations, scripts, .venv, test_modules.py, __init__.py, tests
# W503 line break before binary operator
ignore = F821, W503, W504, E712

[pycodestyle]
exclude=tests, migrations, docs, config, libs, migrations
ignore=W605, W503, W504
count=False
max-line-length=100
max-doc-length=100
statistics=True

[isort]
line_length=79
multi_line_output=3
known_django=django
known_libs=libs
known_drf=rest_framework
known_apps=apps
skip=migrations,_tmp,src,.venv
sections=FUTURE,STDLIB,DJANGO,DRF,THIRDPARTY,FIRSTPARTY,LIBS,APPS,LOCALFOLDER
include_trailing_comma=True

# Common to all rules
[pylama]
linters = pydocstyle,pycodestyle
format = pylint
skip = */migrations*.py,*/.env/*,*/.venv/*,*/testing*.py,*/tests*.py,libs/*
ignore = D100,D104,D105,D107,D203,D204,D205,D213,D301,D400,D406,D407,D413,W503,D200

# Special rules for admin
[pylama:*/admin.py]
ignore = D106

[pylama:*/admin/*.py]
ignore = D106

# Special rules for factories
[pylama:*/factories.py]
ignore = D106

[pylama:*/factories/*.py]
ignore = D106

# Special rules for models
[pylama:*/models.py]
ignore = D106

[pylama:*/models/*.py]
ignore = D106

# Special rules for serializers
[pylama:*/serializers*.py]
ignore = D106

[tool:pytest]
testpaths = tests
python_files = *
filterwarnings =
    once::Warning
    ignore::DeprecationWarning